tests/expected_invalid_empty_state.diag.out
<input>:2:8: error: state declarations must define at least one variant
    public state Empty {
           ^^^^^^^^^^^^^
